created reset page

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,180 +1,103 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,700&display=swap");
-
-* {
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap";
+*,
+*:before,
+*:after {
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: #fff;
   font-family: "Poppins", sans-serif;
 }
-.container {
-  width: 100%;
-  height: 100vh;
+section.container {
   background-color: #080710;
-}
-.round-shapes {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  max-width: 80%;
-  height: 100%;
+  justify-content: center;
+  flex-direction: column-reverse;
+  height: 100vh;
+  width: 100%;
+}
+section.container .form-container {
   position: relative;
-  margin: 0 auto;
 }
-.shape-1,
-.shape-2 {
+section.container .form-container::before {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(#1845ad, #23a2f6);
   border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  margin: 30px 0;
+  transform: translate(0%, 0%);
+  left: -20%;
+  top: -20%;
 }
 
-.shape-1 {
-  background: linear-gradient(to right, #1953b8, #208adb);
-  box-shadow: 0 0 0 1px #208adb;
-  /* POSTION TO THE TOP left */
+section.container .form-container::after {
+  content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(to right, #ff512f, #f09819);
+  border-radius: 50%;
+  transform: translate(0%, 0%);
+  right: -20%;
+  bottom: -20%;
 }
 
-.shape-2 {
-  background: linear-gradient(to right, #f46726, #ee9619);
-  /* POSTION TO THE BOTTOM right */
-  position: absolute;
-  bottom: 0;
-  right: 0;
+section.container form * {
+  letter-spacing: 0.5px;
+  color: #ffffff;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+section.container form {
+  position: relative;
+  height: 550px;
+  z-index: 1;
+  width: 450px;
+  max-width: 100%;
+  background-color: #ffffff3f;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid #ffffff1a;
+  box-shadow: 0 0 40px #08071099;
+  padding: 50px 35px;
 }
 
-.form-container {
-  position: absolute;
-  top: 15%;
-  width: 80%;
-  z-index: 9999;
-  background-color: #28272f;
-  backdrop-filter: blur(8px);
-  opacity: 0.9;
-  margin: 0 auto;
-  display: block;
-}
-
-h1 {
-  padding-top: 2.5em;
-  text-align: center;
+section.container form h3 {
+  font-size: 32px;
   font-weight: 500;
+  text-align: center;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 20px;
+section.container .form-group {
+  margin: 2rem 0;
 }
 
-.form-group {
-  padding: 20px 0;
-}
-
-input,
-label {
-  display: block;
-  width: 100%;
-}
-
-input,
-button,
-.btn-secondary,
-.form-container {
-  border: 1px solid transparent;
-  border-radius: 5px;
-}
-
-input {
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #53575e;
+section.container .form-group input {
+  height: 50px;
   outline: none;
-}
-button {
-  padding: 12px;
-  color: #000;
-  font-weight: 700;
-  margin: 20px 0;
-}
-button:hover {
-  background-color: #000;
-  color: #fff;
-  cursor: pointer;
-}
-.social-icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  border: none;
   width: 100%;
-  margin: 20px 0;
+  background-color: #ffffff12;
+  border-radius: 3px;
+  padding: 0 10px;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 0.5rem 0;
 }
-.btn-secondary {
-  display: flex;
-  justify-content: center;
-  gap: 6px;
-  background-color: #53575e;
-  color: #fff;
-  padding: 8px 12px;
-  width: 45%;
+section.container .form-group a.forgot-pasword {
+  float: right;
+  color: #7db5db;
+  margin: 0.25rem;
+  text-decoration: none;
+}
+section.container button {
+  margin-top: 2rem;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 16px;
+  border-radius: 5px;
   cursor: pointer;
-}
-
-@media (min-width: 576px) {
-  .shape-1 {
-    top: 5%;
-    left: 15%;
-  }
-  .shape-2 {
-    bottom: 10%;
-    right: 15%;
-  }
-}
-
-@media (min-width: 768px) {
-  .form-container {
-    max-width: 50%;
-  }
-  .shape-1 {
-    top: 5%;
-    left: 20%;
-  }
-  .shape-2 {
-    bottom: 10%;
-    right: 20%;
-  }
-}
-
-@media (min-width: 992px) {
-  .form-container {
-    max-width: 40%;
-  }
-}
-@media (min-width: 1200px) {
-  .form-container {
-    max-width: 30%;
-  }
-  .shape-1 {
-    left: 25%;
-  }
-  .shape-2 {
-    right: 25%;
-  }
+  border: none;
 }
