created reset password page

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,7 +69,7 @@ section.container form h3 {
 }
 
 section.container .form-group {
-  margin: 2rem 0;
+  in: 2rem 0;
 }
 
 section.container .form-group input {
